--- a/products.html
+++ b/products.html
@@ -214,7 +214,7 @@
                         <h4 class="card-title">lashthreeblack<br>睫毛修護增長液</h4>
                         
                         
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="page37.html" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
             </div>
