create github pages

--- a/products.html
+++ b/products.html
@@ -224,7 +224,7 @@
                 <div class="card cart-block">
                     <div class="card-img"><img src="assets/images/s-71614548-600x800.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">唇膜眼膜</h4>
+                        <h4 class="card-title">唇膜/眼膜</h4>
                         
                         
                         <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
