create github pages

--- a/products.html
+++ b/products.html
@@ -201,7 +201,7 @@
                         <h4 class="card-title">絲可拉B5抗發炎治愈面膜<div>Deep soothing mask</div></h4>
                         
                         
-                        <div class="card-btn"><a href="https://mobirise.com" class="btn btn-primary">MORE</a></div>
+                        <div class="card-btn"><a href="page40.html" class="btn btn-primary">MORE</a></div>
                     </div>
                 </div>
             </div>
