create github pages

--- a/page18.html
+++ b/page18.html
@@ -29,7 +29,7 @@
   
   <section id="menu-g4" data-rv-view="70">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
