--- a/page51.html
+++ b/page51.html
@@ -29,7 +29,7 @@
   
   <section id="menu-hc" data-rv-view="604">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
