--- a/page55.html
+++ b/page55.html
@@ -30,7 +30,7 @@
   
   <section id="menu-j3" data-rv-view="696">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
