--- a/page28.html
+++ b/page28.html
@@ -65,7 +65,7 @@
 
 <section id="menu-g4" data-rv-view="247">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
