--- a/page33.html
+++ b/page33.html
@@ -63,7 +63,7 @@
 
 <section id="menu-g4" data-rv-view="320">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
