--- a/page46.html
+++ b/page46.html
@@ -29,7 +29,7 @@
   
   <section id="menu-hb" data-rv-view="595">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
