--- a/page54.html
+++ b/page54.html
@@ -63,7 +63,7 @@
 
 <section id="menu-j2" data-rv-view="680">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
