--- a/page56.html
+++ b/page56.html
@@ -30,7 +30,7 @@
   
   <section id="menu-iz" data-rv-view="716">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
