--- a/page40.html
+++ b/page40.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -26,7 +27,40 @@
 </head>
 <body>
   
-  <section class="mbr-section mbr-section__container article" id="header3-kb" data-rv-view="3275" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+  <section id="menu-kl" data-rv-view="833">
+
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
+        <div class="container">
+
+            <div class="mbr-table">
+                <div class="mbr-table-cell">
+
+                    <div class="navbar-brand">
+                        <a href="index.html" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
+                        <a class="navbar-caption text-black text-primary" href="index.html">fixxface.</a>
+                    </div>
+
+                </div>
+                <div class="mbr-table-cell">
+
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        <div class="hamburger-icon"></div>
+                    </button>
+
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">服務項目</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">療程介紹<br></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page51.html">療程總覽</a><a class="dropdown-item text-primary" href="page48.html">獨家儀器療程</a><a class="dropdown-item text-primary" href="page56.html">基本臉部護膚</a><a class="dropdown-item text-primary" href="page20.html">角蛋白睫毛</a><a class="dropdown-item text-primary" href="page52.html">眉毛塑型</a></div></div></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="products.html">產品販售 ☁</a></li></ul>
+                    <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        <div class="close-icon"></div>
+                    </button>
+
+                </div>
+            </div>
+
+        </div>
+    </nav>
+
+</section>
+
+<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-kb" data-rv-view="817" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -37,7 +71,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-kc" data-rv-view="3277" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-kc" data-rv-view="819" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -48,7 +82,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-ke" data-rv-view="3281" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-ke" data-rv-view="821" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -63,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-kf" data-rv-view="3283" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-kf" data-rv-view="823" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -78,7 +112,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-kk" data-rv-view="3294" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-kk" data-rv-view="825" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -93,7 +127,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-kg" data-rv-view="3285" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-kg" data-rv-view="827" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -103,7 +137,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-ki" data-rv-view="3289" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="buttons1-ki" data-rv-view="831" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -115,7 +149,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-kh" data-rv-view="3287" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-kh" data-rv-view="829" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
@@ -127,6 +161,8 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/web/assets/bootstrap4-migrate/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
