create github pages

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-secondary" href="https://line.me/R/ti/p/%40llr0044b">shop now</a></div>
+                    <div class="text-xs-center"><a class="btn btn-secondary" href="page50.html">shop now</a></div>
                 </div>
             </div>
 
