--- a/page50.html
+++ b/page50.html
@@ -149,7 +149,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-secondary" href="https://mobirise.com/mobirise-free-win.zip">蝦皮購買</a> <a class="btn btn-secondary-outline btn-secondary" href="https://line.me/R/ti/p/%40llr0044b">line訂購工作室取貨</a></div>
+                <div class="text-xs-center"><a class="btn btn-secondary" href="https://shopee.tw/fixxface">蝦皮購買</a> <a class="btn btn-secondary-outline btn-secondary" href="https://line.me/R/ti/p/%40llr0044b">line訂購工作室取貨</a></div>
             </div>
         </div>
     </div>
