--- a/page57.html
+++ b/page57.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   
-  <section id="menu-m2" data-rv-view="896">
+  <section id="menu-m2" data-rv-view="84">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-m4" data-rv-view="892" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-m4" data-rv-view="80" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -70,7 +70,7 @@
 
 </section>
 
-<section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding" id="msg-box1-m3" data-rv-view="898" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding" id="msg-box1-m3" data-rv-view="86" style="background-color: rgb(255, 255, 255); padding-top: 90px; padding-bottom: 90px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-secondary" href="page28.html">shop now</a></div>
+                    <div class="text-xs-center"><a class="btn btn-secondary" href="page58.html" target="_blank">優惠資訊</a> <a class="btn btn-secondary" href="page58.html" target="_blank">蝦皮下單🛒</a></div>
                 </div>
             </div>
 
@@ -96,7 +96,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-m1" data-rv-view="894" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-m1" data-rv-view="82" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
