create github pages

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-danger" href="page58.html" target="_blank">✨活動優惠資訊✨</a> <a class="btn btn-danger" href="page58.html" target="_blank">✨蝦皮下單✨</a></div>
+                    <div class="text-xs-center"><a class="btn btn-danger" href="page58.html" target="_blank">✨活動優惠資訊✨</a> <a class="btn btn-danger" href="https://shopee.tw/fixxface" target="_blank">✨蝦皮下單✨</a></div>
                 </div>
             </div>
 
