--- a/page51.html
+++ b/page51.html
@@ -87,10 +87,10 @@
               <div class="card cart-block">
                   <div class="card-img"><img src="assets/images/1-600x600.png" class="card-img-top"></div>
                   <div class="card-block">
-                    <h4 class="card-title">超流體奈米儀器美容<br>（消脂/拉提/童顏/美白）</h4>
+                    <h4 class="card-title">超流體奈米儀器美容<br><br></h4>
                     
                     
-                    <div class="card-btn"><a href="page48.html" class="btn btn-danger">KNOW MORE</a></div>
+                    <div class="card-btn"><a href="index.html" class="btn btn-danger">KNOW MORE</a></div>
                     </div>
                 </div>
             </div>
