create github pages

--- a/page54.html
+++ b/page54.html
@@ -86,8 +86,12 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
-                  <h3 class="mbr-section-title display-2">最新美容新科技<br>TN-5 療程Ｑ＆Ａ</h3>
-                  
+                  <h3 class="mbr-section-title display-2">魔力音速<br><span style="font-weight: 400;">&nbsp;Ｑ＆Ａ</span></h3>
+                  <div class="lead">
+
+                    <p></p><p>（原名稱奈美極音速）</p><p></p>
+
+                  </div>
 
                   
               </div>
