--- a/page47.html
+++ b/page47.html
@@ -114,9 +114,21 @@
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-je" data-rv-view="602">
     <div class="mbr-figure">
-        <div><img src="assets/images/2-1350x650.png"></div>
+        <div><img src="assets/images/2-1-1350x650.png"></div>
         
     </div>
+</section>
+
+<section class="mbr-section mbr-section__container" id="buttons1-n3" data-rv-view="5073" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="text-xs-center"><a class="btn btn-primary" href="https://fixxface.com/pages/%E9%97%9C%E6%96%BCfixxface" target="_blank">A Special Note</a> <a class="btn btn-black btn-black-outline" href="https://fixxface.com/" target="_blank">timetofixx</a></div>
+            </div>
+        </div>
+    </div>
+
 </section>
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-jf" data-rv-view="604">
@@ -128,7 +140,7 @@
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-jh" data-rv-view="606">
     <div class="mbr-figure">
-        <div><img src="assets/images/fixxface-2-1350x650.png"></div>
+        <div><img src="assets/images/5-1350x650.png"></div>
         
     </div>
 </section>
