create github pages

--- a/page47.html
+++ b/page47.html
@@ -149,7 +149,7 @@
                   <div class="card-block">
                     <h4 class="card-title">無暇淨膚課程<br><br></h4>
                     
-                    <p class="card-text">Bootstrap 4 has been noted as one of the most reliable and proven frameworks and Mobirise has been equipped to develop websites using this framework.</p>
+                    <p class="card-text">卸妝➜ 洗淨➜軟化 ➜ 手清粉刺及胜肽酸二選一 ➜無暇淨膚音速槍課程➜ RF微電流導入(洋甘菊退紅舒緩精華導入)➜ 敷臉<br></p>
                     <div class="card-btn"><a href="page27.html" class="btn btn-primary">💫MORE💫</a></div>
                     </div>
                 </div>
