--- a/fixxfaceskincare.html
+++ b/fixxfaceskincare.html
@@ -73,7 +73,7 @@
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-a2" data-rv-view="4">
     <div class="mbr-figure">
-        <div><img src="assets/images/img-1210-1080x1080.jpg"></div>
+        <div><img src="assets/images/19-1400x972.png"></div>
         
     </div>
 </section>
