--- a/fixxfaceskincare.html
+++ b/fixxfaceskincare.html
@@ -123,7 +123,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="page47.html">關於我們 ✹</a> <a class="btn btn-black btn-black-outline" href="news.html" target="_blank">預約須知 ❍ </a></div>
+                <div class="text-xs-center"> <a class="btn btn-black btn-black-outline" href="page47.html">關於我們 ✹</a> <a class="btn btn-black btn-black-outline" href="news.html" target="_blank">預約須知 ❍ </a> <a class="btn btn-black btn-black-outline" href="page49.html" target="_blank">預約臉部前先看這 ◒</a></div>
             </div>
         </div>
     </div>
