--- a/page53.html
+++ b/page53.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   
-  <section id="menu-hu" data-rv-view="700">
+  <section id="menu-hu" data-rv-view="651">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">服務項目</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">服務項目</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="page49.html" aria-expanded="false" target="_blank">預約臉部前先看這&nbsp;</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false" data-toggle="dropdown-submenu">魔力音速</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-primary" href="page48.html" aria-expanded="false">魔力音速儀器介紹</a><a class="dropdown-item text-primary" href="page47.html" aria-expanded="false" target="_blank">魔力音速課程介紹</a><a class="dropdown-item text-primary" href="page54.html" aria-expanded="false" target="_blank">魔力音速影片解說及常見問題Ｑ＆Ａ</a></div></div><a class="dropdown-item text-primary" href="page56.html" aria-expanded="false" target="_blank">基礎護理及煥膚</a><a class="dropdown-item" href="#" aria-expanded="false"></a><a class="dropdown-item text-primary" href="page20.html" aria-expanded="false">FIXXFACE睫毛管理</a><a class="dropdown-item text-primary" href="page52.html" aria-expanded="false" target="_blank">FIXXFACE眉毛塑型<br></a><a class="dropdown-item text-primary" href="page44.html" aria-expanded="false" target="_blank">課程教學  <br></a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="news.html">預約須知 ❍&nbsp;</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page47.html">關於我們 ✹</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-black-outline btn-black" href="page44.html">課程教學 ◒</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-hm" data-rv-view="683" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-hm" data-rv-view="634" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -70,7 +70,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-hn" data-rv-view="685" style="background-image: url(assets/images/-1-1-596x842.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section article mbr-parallax-background" id="msg-box8-hn" data-rv-view="636" style="background-image: url(assets/images/-1-1-596x842.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -85,7 +85,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-ho" data-rv-view="688" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-ho" data-rv-view="639" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -95,7 +95,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-hp" data-rv-view="690" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section article mbr-section__container" id="content1-hp" data-rv-view="641" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -105,7 +105,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-hq" data-rv-view="692" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-hq" data-rv-view="643" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -115,7 +115,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-hr" data-rv-view="694" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-hr" data-rv-view="645" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -127,7 +127,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-hs" data-rv-view="696" style="background-color: rgb(184, 106, 123); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-hs" data-rv-view="647" style="background-color: rgb(184, 106, 123); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -137,7 +137,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ht" data-rv-view="698" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ht" data-rv-view="649" style="background-color: rgb(255, 255, 255); padding-top: 0.875rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>✦&nbsp;高雄 休修臉 美學&nbsp;✦<br>since2017<br><br></p>
