create github pages

--- a/fixxfaceskincare.html
+++ b/fixxfaceskincare.html
@@ -73,7 +73,7 @@
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-a2" data-rv-view="2">
     <div class="mbr-figure">
-        <div><img src="assets/images/19-1400x972.png"></div>
+        <div><img src="assets/images/skin-care-2-1400x1980.png"></div>
         
     </div>
 </section>
@@ -83,7 +83,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2"><p>👋👋&nbsp; welcome to&nbsp;fixxface&nbsp;!!! 👋👋<br></p></h3>
+                <h3 class="mbr-section-title display-2"><p>👋👋&nbsp; 👋👋<br></p></h3>
                 <div>
 
                   <div class="mbr-social-likes" data-counters="false">
@@ -97,13 +97,6 @@
                 </div>
             </div>
         </div>
-    </div>
-</section>
-
-<section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-kz" data-rv-view="6">
-    <div class="mbr-figure">
-        <div><img src="assets/images/pink-and-blue-bright-outline-student-internship-graphic-designer-video-resume-talking-presentation-5-1400x788.png"></div>
-        
     </div>
 </section>
 
@@ -135,7 +128,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center">   <a class="btn btn-black-outline btn-black" href="page60.html" target="_blank">獨家魔力音速<br></a>     <a class="btn btn-black-outline btn-black" href="page44.html" target="_blank">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;課程教學&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>  <a class="btn btn-black-outline btn-black" href="page51.html" target="_blank">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;服務項目&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>  <a class="btn btn-black-outline btn-black" href="products.html" target="_blank">&nbsp; &nbsp; &nbsp; &nbsp;網路產品販售&nbsp; &nbsp; &nbsp;&nbsp;</a> <a class="btn btn-black-outline btn-black" href="page18.html" target="_blank">&nbsp; &nbsp; &nbsp;你可能很想知道&nbsp; &nbsp; &nbsp;</a></div>
+                <div class="text-xs-center">   <a class="btn btn-black-outline btn-black" href="page60.html" target="_blank">魔力音速<br></a>     <a class="btn btn-black-outline btn-black" href="page44.html" target="_blank">課程教學</a>  <a class="btn btn-black-outline btn-black" href="page51.html" target="_blank">服務項目</a>  <a class="btn btn-black-outline btn-black" href="products.html" target="_blank">網路產品販售</a> <a class="btn btn-black-outline btn-black" href="page18.html" target="_blank">你可能很想知道</a></div>
             </div>
         </div>
     </div>
