create github pages

--- a/page21.html
+++ b/page21.html
@@ -39,7 +39,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" target="_blank" class="navbar-logo"><img src="assets/images/img-8456-128x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption text-black text-primary" href="index.html">fixxface.</a>
+                        <a class="navbar-caption text-black" href="fixxfaceskincare.html">fixxface.</a>
                     </div>
 
                 </div>
