create github pages

--- a/page49.html
+++ b/page49.html
@@ -60,7 +60,22 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-ne" data-rv-view="571" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-after-navbar" id="msg-box3-oq" data-rv-view="1264" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 80px;">
+
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2 text-xs-center">
+                <h3 class="mbr-section-title display-2">&nbsp;Ｑ：你可能也想知道</h3>
+                <div class="lead">&nbsp;</div>
+                <div><a class="btn btn-secondary" href="page19.html">你根本不是過敏肌<br></a></div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-ne" data-rv-view="571" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
