--- a/products.html
+++ b/products.html
@@ -196,9 +196,9 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 0px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/1-600x845.png" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/7e11b208-ed55-4765-8b40-f93728c08a9f-600x697.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">絲可拉B5抗發炎治愈面膜<div>Deep soothing mask</div></h4>
+                        <h4 class="card-title"><div>&nbsp;mask</div></h4>
                         
                         
                         <div class="card-btn"><a href="page40.html" class="btn btn-primary">MORE</a></div>
